<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/viewHeader"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:background="@color/rosaAudilu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <ImageView
            android:id="@+id/imgViewLogoAudilu"
            android:layout_width="67dp"
            android:layout_height="67dp"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/logoaudilucircularsinfondo"
            app:layout_constraintBottom_toBottomOf="@id/viewHeader"
            app:layout_constraintStart_toStartOf="@id/viewHeader" />

        <TextView
            android:id="@+id/txtNombreApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="9dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/audilu"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@id/viewHeader"
            app:layout_constraintStart_toEndOf="@id/imgViewLogoAudilu"
            app:layout_constraintTop_toTopOf="@id/viewHeader" />

        <Button
            android:id="@+id/btn_Disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#673AB7"
            android:fontFamily="sans-serif"
            android:text="@string/desconectar"
            android:textColor="#DEDEDF"
            android:typeface="normal"
            app:iconTint="#FEFEFE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="563dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewHeader"
            app:layout_constraintVertical_bias="1.0">

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_Connect"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="65dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="150dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="#673AB7"
                    android:fontFamily="sans-serif"
                    android:text="@string/conectar"
                    android:textColor="@color/white"
                    android:typeface="normal" />

                <Button
                    android:id="@+id/btnBuscar"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="92dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="#673AB7"
                    android:fontFamily="sans-serif"
                    android:text="@string/buscar"
                    android:textColor="@color/white"
                    app:iconTint="@color/purple_500" />
            </LinearLayout>

            <Spinner
                android:id="@+id/listDeviceBluetooth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#DCCEA6"
                android:spinnerMode="dropdown"
                tools:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:id="@+id/sonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sonido"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/movText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mov"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:id="@+id/valSonido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/valMov"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tempText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/temp"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/HumText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hum"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:id="@+id/valTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/valHum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>