<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/container_header"
                    android:layout_width="match_parent"
                    android:layout_height="95dp">

                    <View
                        android:id="@+id/header"
                        android:layout_width="wrap_content"
                        android:layout_height="95dp"
                        android:background="@color/pink_light"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="0dp" />

                    <TextView
                        android:id="@+id/name_app"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/audilu"
                        android:textColor="@color/black"
                        android:textSize="28sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.583"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.28" />

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="65dp"
                        android:layout_height="60dp"
                        android:contentDescription="@string/content_description"
                        android:src="@drawable/logoaudilucircularsinfondo"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.390"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.141" />

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tablayout"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/header"
                        app:layout_constraintHorizontal_bias="0.179"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0"
                        app:tabGravity="start"
                        app:tabIndicatorColor="@color/active_text"
                        app:tabIndicatorFullWidth="false"
                        app:tabMode="fixed"
                        app:tabSelectedTextColor="@color/active_text"
                        app:tabTextAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:tabTextColor="@color/text_color"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:background="@color/pink_light"
                        tools:layout_editor_absoluteX="16dp"
                        tools:layout_editor_absoluteY="60dp">

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/op_pref" />

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/op_home" />

                    </com.google.android.material.tabs.TabLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.viewpager2.widget.ViewPager2
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="parent"
                        android:id="@+id/viewPager"
                        android:layout_weight="1"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>